# cicd_project

.github/workflows/: lint.yml
part-1-setup-initial-project/backend/application/: pyproject.toml
part-1-setup-initial-project/backend/application/src/: main.py
part-1-setup-initial-project/backend/application/src/router/: routes.py
part-2-formatting-linting/backend/application/: .flake8  Makefile  pyproject.toml
part-2-formatting-linting/backend/application/src/: main.py
part-2-formatting-linting/backend/application/src/router/: routes.py
